--- a/static/src/main/less/body.less
+++ b/static/src/main/less/body.less
@@ -2,6 +2,15 @@ body{
 	font-family: "Times New Roman", Times, "微軟正黑體", "Microsoft JhengHei", "新細明體", "PMingLiU", "細明體", "MingLiU", "標楷體", "DFKai-sb", sans-serif;
 }
 
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('http://bradsknutson.com/wp-content/uploads/2013/04/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
 
 section {
 	width: 100%;
