--- a/static/src/main/less/body.less
+++ b/static/src/main/less/body.less
@@ -10,6 +10,7 @@ body{
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
+	background-color: #373B44;
 	background: url('http://bradsknutson.com/wp-content/uploads/2013/04/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
@@ -52,4 +53,8 @@ footer{
 	font-size: 1.2em;
 	color:#EEE;
 	line-height: 2em;
+}
+
+header, section, footer{
+	display:none;
 }
