--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -3,16 +3,6 @@ body{
 	
 }
 
-.loader {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url(../../pic/loading.gif) 50% 50% no-repeat rgb(55,59,68);
-}
-
 section {
 	width: 100%;
 	display: table;
@@ -36,24 +26,29 @@ section {
 		background-color: #F5F5DC;
 	}
 }
+header{
+	section{
+		display: block;
+	}
+}
+
 .page{
 	@media only screen and (min-width: 64.063em){
-		padding-top:75px;
-		padding-bottom:75px;
+		padding-top:60px;
+		padding-bottom:60px;
+		padding-left:50px;
+		padding-right:50px;
 	}
 	@media only screen and (max-width: 64.063em){
 		padding-top:50px;
 		padding-bottom:50px;
+		padding-left:50px;
+		padding-right:50px;
 	}
 }
 footer{
-
 	background-color: black;
 	font-size: 1.2em;
 	color:#EEE;
 	line-height: 2em;
-}
-
-header, section, footer{
-	display:none;
 }
