--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -13,7 +13,7 @@ section {
 		background-color: #373B44;
 	}
 	&#news{
-		background-color: #F5F5DC;
+		background-color: #fffcf7;
 
 	}
 	&#introduction{
@@ -22,8 +22,11 @@ section {
 		z-index: 0;
 		position: relative;
 	}
-	&#group-sponsor{
-		background-color: #F5F5DC;
+	&#group{
+		background-color: #fffcf7;
+	}
+	&#sponsor{
+		background-color: #fffcf7;
 	}
 }
 header{
@@ -36,14 +39,10 @@ header{
 	@media only screen and (min-width: 64.063em){
 		padding-top:60px;
 		padding-bottom:60px;
-		padding-left:50px;
-		padding-right:50px;
 	}
 	@media only screen and (max-width: 64.063em){
 		padding-top:50px;
 		padding-bottom:50px;
-		padding-left:50px;
-		padding-right:50px;
 	}
 }
 footer{
