--- a/src/main/less/group.less
+++ b/src/main/less/group.less
@@ -1,4 +1,7 @@
 #group{
+	.back(){
+		background-repeat: no-repeat; background-size: cover;
+	}
 	.panel{
 		height:10em;
 	}
@@ -9,7 +12,34 @@
 		box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 		border-radius: 50%;
 		background-position:50% 50%;
-
+	}
+	#frog{
+		background: url(../../pic/oberon.png);
+		.back;
+	}
+	#fishball{
+		background: url(../../pic/fishball.png);
+		.back;
+	}
+	#bekket{
+		background: url(../../pic/bekket.jpg);
+		.back;
+	}
+	#ray{
+		background: url(../../pic/ray.jpg);
+		.back;
+	}
+	#ham{
+		background: url(../../pic/hamburger.jpg);
+		.back;
+	}
+	#majer{
+		background: url(../../pic/majer.jpg);
+		.back;
+	}
+	#joshua{
+		background: url(../../pic/joshua.jpg);
+		.back;
 	}
 }
 #sponsor{
