--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -17,7 +17,7 @@ section {
 
 	}
 	&#introduction{
-		background: url(http://upload.wikimedia.org/wikipedia/commons/2/2b/NTHU_Library_2012.JPG) no-repeat center center fixed;
+		background: url(http://upload.wikimedia.org/wikipedia/commons/2/2b/NTHU_Library_2012.JPG) no-repeat center center;
 		background-size: cover;
 		z-index: 0;
 		position: relative;
