--- a/src/main/less/hexagon.less
+++ b/src/main/less/hexagon.less
@@ -28,10 +28,14 @@
 		position:absolute;
 		text-align: center;
 		z-index: 1;
-		#fourth{
+		img{
 			max-width:100%;
 			max-height:100%;
 		}
+		#first{
+			font-weight: 800;
+		}
+			
 	}
 	
 }
@@ -111,9 +115,9 @@
 		margin: 0 auto;
 		max-width: 32em;
 		.hex{
-			@hex-width: 85px;
+			@hex-width: 88px;
 			@hex-height: @hex-width / 1.73;
-			@hex-gap: 16px;
+			@hex-gap: 17px;
 			.hexagon;
 		}
 	}
