--- a/src/main/less/hexagon.less
+++ b/src/main/less/hexagon.less
@@ -7,6 +7,7 @@
 	position: relative;
 	margin-top: @hex-gap;
 	margin-bottom: @hex-gap;
+	opacity: 0;
 	.hex-1{
 		width: @hex-width;
 		height: @hex-height;
@@ -41,6 +42,7 @@
 				font-size:@font-size+10;
 				position: relative;
 				top: 10%;
+   				color:black;
 			}
 		}
 			
