--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -1,5 +1,5 @@
 body{
-	font-family: "Times New Roman", Times, "微軟正黑體", "Microsoft JhengHei", "新細明體", "PMingLiU", "細明體", "MingLiU", "標楷體", "DFKai-sb", sans-serif;
+	font-family: "Times New Roman", Times,"標楷體", "DFKai-sb",  "微軟正黑體", "Microsoft JhengHei", "新細明體", "PMingLiU", "細明體", "MingLiU", sans-serif;
 	
 }
 
