--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -29,6 +29,12 @@ section {
 		height:auto;
 		background-color: #fffcf7;
 	}
+	&#index2{
+		background-color:#373B44;		
+	}
+	&#article{
+		background-color: #fffcf7;
+	}
 }
 header{
 	section{
