--- a/src/main/less/hexagon.less
+++ b/src/main/less/hexagon.less
@@ -25,7 +25,7 @@
 	.main{
 		width: @hex-width;
 		height: @hex-height;
-		background: turquoise;
+		background: @hex-color;
 		position:absolute;
 		text-align: center;
 		z-index: 1;
