--- a/src/main/less/help.less
+++ b/src/main/less/help.less
@@ -3,6 +3,10 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: white;
 	}
+	img{
+		max-width:40%;
+		max-height:40%;
+	}
 	a.button {
 		background: turquoise;
 		color: black;
