--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -35,6 +35,14 @@ section {
 	&#article{
 		background-color: #fffcf7;
 	}
+	&#worker{
+		height:auto;
+		background-color: #00b2a9;
+	}
+	&#article2{
+		height:auto;
+		background-color: #fffcf7;
+	}
 }
 header{
 	section{
