--- a/src/main/less/group.less
+++ b/src/main/less/group.less
@@ -47,6 +47,22 @@
 		background: url(../../pic/joshua.jpg);
 		.back;
 	}
+	#tocknicsu{
+		background:url(../../pic/tocknicsu.jpg);
+		.back
+	}
+	#yhchen{
+		background:url(../../pic/yhchen.jpg);
+		.back
+	}
+	#yhchen{
+		background:url(../../pic/yhchen.jpg);
+		.back
+	}
+	#chhun{
+		background:url(../../pic/chhu.jpg);
+		.back
+	}
 }
 #sponsor {
 	.panel {
