--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -1,6 +1,5 @@
 body{
-	font-family: "Times New Roman", Times, "華康行書體", "微軟正黑體", "Microsoft JhengHei", "新細明體", "PMingLiU", "細明體", "MingLiU", "標楷體", "DFKai-sb", sans-serif;
-	
+	font-family: 'Noto Sans', sans-serif;
 }
 
 section {
