--- a/src/main/less/hexagon.less
+++ b/src/main/less/hexagon.less
@@ -34,7 +34,7 @@
 			max-height:100%;
 		}
 		span{
-			font-family: 'Lobster', cursive;
+			font-family: 'Noto Sans', sans-serif;
 			&#fifth{
 				font-size:@font-size;
 			}
