--- a/src/main/less/body.less
+++ b/src/main/less/body.less
@@ -31,6 +31,9 @@ section {
 	&#index2{
 		background-color:#373B44;		
 	}
+    &#schedule{
+		background-color: #e0f0e4;
+	}
 	&#article{
 		background-color: #fffcf7;
 	}
