--- a/src/main/less/group.less
+++ b/src/main/less/group.less
@@ -63,10 +63,18 @@
 		background:url(../../pic/chhu.jpg);
 		.back
 	}
+    #roy{
+		background:url(../../pic/roy.png);
+		.back
+	}
 }
 #sponsor {
 	.panel {
-		max-height: 20em;
+		height: 8em;
+	}
+    .back() {
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
 	.circular {
 		width: 80%;
