--- a/src/main/less/schedule.less
+++ b/src/main/less/schedule.less
@@ -1,10 +1,11 @@
-.sche{
-	
-	table.schedule-table{
-		width: 100%;
-		th{
-			color:green;
-			width:100px;
-		}
+#schedule{
+    padding:50px;
+	table{
+        th,td{
+            height: 70px;
+            size:2em;
+            color:black;
+        }
+        width: 100%;
 	}
 }
