--- a/src/main/less/schedule.less
+++ b/src/main/less/schedule.less
@@ -3,8 +3,9 @@
 	table{
         th,td{
             height: 70px;
-            size:2em;
+            font-size:1.5em;
             color:black;
+            
         }
         width: 100%;
 	}
